# duprly

./: .clasp.json  .dupr-sync-config  .env.example  .env.template  .gitignore  CRAWL_AND_FIT_PLAN.md  CRAWL_MONITOR.sh  DEPLOY.md  DUPR_ALGORITHM_README.md  DUPR_BOT_INTEGRATION.md  DUPR_MONITOR_README.md  GITFLOW_SYNC_README.md  INSTALL_INSTRUCTIONS.md  MATCH_ANALYZER_README.md  MCP_SETUP.md  PIPELINE_STATUS.md  QUICK_START.md  README.md  README_DUPR_CLUB_MANAGER.md  README_MCP.md  RELIABILITY_FINDINGS.md  RELIABILITY_IMPACT_SUMMARY.md  REVERSE_ENGINEER_DUPR.py  SETUP_NO_BREW.md  WAKE_UP_README.md  app.py  com.duprly.monitor.plist  deploy-with-git.sh  dupr_bot_mcp.py  dupr_client.py  dupr_club_manager.gs  dupr_club_manager_fixed.gs  dupr_club_manager_updated.gs  dupr_dashboard.py  dupr_db.py  dupr_model.json  dupr_monitor.py  dupr_monitor_test.py  dupr_predictor.py  dupr_rate_limit.py  (+36 more)
.cursor/: mcp.json
api/: index.py  requirements.txt
apps-script/: Code.gs  Code.js  appsscript.json
backend/: api.py  api_models.py  schema.sql  similarity.py
bruno/: README.md
docs/: DEPLOY_WEBSITE.md  PREDICTOR_CONFIDENCE_JON_74.md  SHADOW_RESET_RESULTS.md  TICKETS.md
scripts/: add_reliability_and_validate.py  add_reliability_to_csv.py  compare_match_impact.py  crawl_club_matches.py  crawl_status.py  debug_dupr_search.sh  evaluate_predictor_accuracy.py  extract_match_rating_data.py  extract_match_rating_data_with_reliability.py  fit_and_save.py  fit_dupr_final.py  fit_dupr_model.py  fit_dupr_simple.py  fit_dupr_with_reliability.py  generate_mcp_api_key.py  run_full_pipeline.sh  (+10 more)
(+70 files in other folders)
